--- a/app/package.json
+++ b/app/package.json
@@ -15,6 +15,8 @@
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
     "create-react-class": "^15.7.0",
+    "lottie-ios": "3.1.8",
+    "lottie-react-native": "^3.5.0",
     "react": "16.13.1",
     "react-native": "0.63.4",
     "react-native-gesture-handler": "^1.9.0",
@@ -24,7 +26,9 @@
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.16.1",
     "react-native-sound": "^0.11.0",
+    "react-native-splash-screen": "^3.2.0",
     "react-redux": "^7.2.2",
+    "react-viro": "^2.17.0",
     "redux": "^4.0.5",
     "redux-form": "^8.3.7",
     "redux-persist": "^6.0.0",
