--- a/app/package.json
+++ b/app/package.json
@@ -22,6 +22,8 @@
     "react-native-gesture-handler": "^1.9.0",
     "react-native-health": "^1.2.1",
     "react-native-maps": "^0.27.1",
+    "react-native-modal": "^11.6.1",
+    "react-native-progress": "^4.1.2",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.16.1",
