--- a/app/package.json
+++ b/app/package.json
@@ -23,13 +23,16 @@
     "react-native-gesture-handler": "^1.9.0",
     "react-native-health": "^1.2.1",
     "react-native-maps": "^0.27.1",
+    "react-native-material-ripple": "^0.9.1",
     "react-native-modal": "^11.6.1",
+    "react-native-permissions": "^3.0.0",
     "react-native-progress": "^4.1.2",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.16.1",
     "react-native-sound": "^0.11.0",
     "react-native-splash-screen": "^3.2.0",
+    "react-native-vector-icons": "^7.1.0",
     "react-redux": "^7.2.2",
     "react-viro": "^2.17.0",
     "redux": "^4.0.5",
