--- a/app/package.json
+++ b/app/package.json
@@ -20,6 +20,7 @@
     "lottie-react-native": "^3.5.0",
     "react": "16.13.1",
     "react-native": "0.63.4",
+    "react-native-config": "^1.4.1",
     "react-native-gesture-handler": "^1.9.0",
     "react-native-health": "^1.2.1",
     "react-native-maps": "^0.27.1",
