--- a/app/ios/Steppers/Info.plist
+++ b/app/ios/Steppers/Info.plist
@@ -30,7 +30,8 @@
 			<key>CFBundleURLSchemes</key>
 			<array>
 				<string>com.googleusercontent.apps.373085034119-qk52t36490hemmls6pjs34t8p9hlr4j1</string>
-        <string>fb824884295024983</string>
+				<string>fb824884295024983</string>
+        <string>steppers</string>
 			</array>
 		</dict>
 	</array>
@@ -130,27 +131,29 @@
 	<string>Dark</string>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
-  <key>FacebookAppID</key>
-  <string>824884295024983</string>
-  <key>FacebookDisplayName</key>
-  <string>Steppers</string>
-  <key>LSApplicationQueriesSchemes</key>
-  <array>
-    <string>fbapi</string>
-    <string>fbapi20130214</string>
-    <string>fbapi20130410</string>
-    <string>fbapi20130702</string>
-    <string>fbapi20131010</string>
-    <string>fbapi20131219</string>
-    <string>fbapi20140410</string>
-    <string>fbapi20140116</string>
-    <string>fbapi20150313</string>
-    <string>fbapi20150629</string>
-    <string>fbapi20160328</string>
-    <string>fbauth</string>
-    <string>fb-messenger-share-api</string>
-    <string>fbauth2</string>
-    <string>fbshareextension</string>
-  </array>
+	<key>FacebookAppID</key>
+	<string>824884295024983</string>
+	<key>FacebookDisplayName</key>
+	<string>Steppers</string>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>fbapi</string>
+		<string>fbapi20130214</string>
+		<string>fbapi20130410</string>
+		<string>fbapi20130702</string>
+		<string>fbapi20131010</string>
+		<string>fbapi20131219</string>
+		<string>fbapi20140410</string>
+		<string>fbapi20140116</string>
+		<string>fbapi20150313</string>
+		<string>fbapi20150629</string>
+		<string>fbapi20160328</string>
+		<string>fbauth</string>
+		<string>fb-messenger-share-api</string>
+		<string>fbauth2</string>
+		<string>fbshareextension</string>
+	</array>
+  <key>branch_universal_link_domains</key>
+  <string>key_live_na8icXmcUC9dIcsKwRS1xcobCug9lcel</string>
 </dict>
 </plist>
