--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,10 @@
     "@react-native-community/geolocation": "^2.0.2",
     "@react-native-community/google-signin": "^5.0.0",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-firebase/analytics": "^10.4.1",
+    "@react-native-firebase/app": "^10.4.0",
+    "@react-native-firebase/crashlytics": "^10.4.1",
+    "@react-native-firebase/messaging": "^10.4.1",
     "@react-navigation/bottom-tabs": "^5.11.2",
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
@@ -22,6 +26,7 @@
     "lottie-react-native": "^3.5.0",
     "react": "16.13.1",
     "react-native": "0.63.4",
+    "react-native-branch": "^5.0.0",
     "react-native-config": "^1.4.1",
     "react-native-fbsdk": "^3.0.0",
     "react-native-gesture-handler": "^1.9.0",
