--- a/app/package.json
+++ b/app/package.json
@@ -30,6 +30,7 @@
     "react-native-config": "^1.4.1",
     "react-native-fbsdk": "^3.0.0",
     "react-native-gesture-handler": "^1.9.0",
+    "react-native-haptic-feedback": "^1.11.0",
     "react-native-health": "^1.2.1",
     "react-native-maps": "^0.27.1",
     "react-native-material-ripple": "^0.9.1",
@@ -47,7 +48,8 @@
     "redux": "^4.0.5",
     "redux-form": "^8.3.7",
     "redux-persist": "^6.0.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "toggle-switch-react-native": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
