--- a/app/package.json
+++ b/app/package.json
@@ -24,6 +24,7 @@
     "create-react-class": "^15.7.0",
     "lottie-ios": "3.1.8",
     "lottie-react-native": "^3.5.0",
+    "random-location": "^1.1.3",
     "react": "16.13.1",
     "react-native": "0.63.4",
     "react-native-branch": "^5.0.0",
