--- a/api/package.json
+++ b/api/package.json
@@ -5,14 +5,31 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon app.js"
+    "start": "node -r esm index.js",
+    "dev": "nodemon -w ./ --exec \"node -r esm index.js\""
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "esm": "^3.2.25",
     "express": "^4.17.1",
-    "mongoose": "^5.11.12"
+    "express-validation": "^3.0.6",
+    "google-auth-library": "^6.1.4",
+    "helmet": "^4.4.1",
+    "http": "^0.0.1-security",
+    "http-status": "^1.5.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.11.12",
+    "morgan": "^1.10.0",
+    "node-async-redis": "^1.0.1",
+    "reqclient": "^2.4.0",
+    "socket.io": "^3.1.0",
+    "socket.io-emitter": "^3.2.0",
+    "socket.io-redis": "^6.0.1",
+    "swagger-jsdoc": "^6.0.1",
+    "swagger-ui-express": "^4.1.6"
   }
 }
