--- a/app/package.json
+++ b/app/package.json
@@ -60,7 +60,8 @@
     "eslint": "^6.5.1",
     "jest": "^25.1.0",
     "metro-react-native-babel-preset": "^0.59.0",
-    "react-test-renderer": "16.13.1"
+    "react-test-renderer": "16.13.1",
+    "socket.io-client": "^3.1.0"
   },
   "jest": {
     "preset": "react-native"
