--- a/api/package.json
+++ b/api/package.json
@@ -26,9 +26,9 @@
     "morgan": "^1.10.0",
     "node-async-redis": "^1.0.1",
     "reqclient": "^2.4.0",
-    "socket.io": "^3.1.0",
-    "socket.io-emitter": "^3.2.0",
-    "socket.io-redis": "^6.0.1",
+    "socket.io": "2.1.1",
+    "socket.io-emitter": "3.1.1",
+    "socket.io-redis": "5.2.0",
     "swagger-jsdoc": "^6.0.1",
     "swagger-ui-express": "^4.1.6"
   }
