--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,31 +1,19 @@
-stages:
-  - build
-
 on:
   push:
     branches:
     - '*'
 
-
-image: mingc/android-build-box
-
 jobs:
   build:
-    stage: build
-    only:
-      refs:
-        - master
-    tags:
-      - general
-    script:
-      - gem install bundler:2.2.15
-      - rm -rf node_modules
-      - yarn
-      - npx jetify
-      - cd android
-      - rm -rf app/src/main/res/raw
-      - ./gradlew clean
-      - fastlane install_plugins
-      - fastlane build id:$ANDROID_APP_ID token:$TOKEN
+    runs-on: mingc/android-build-box
+    steps:
+      - run: "gem install bundler:2.2.15"
+      - run: "rm -rf node_modules"
+      - run: "yarn"
+      - run: "npx jetify"
+      - run: "cd android"
+      - run: "./gradlew clean"
+      - run: "fastlane install_plugins"
+      - run: "fastlane build id:$ANDROID_APP_ID token:$TOKEN"
 
 
