--- a/app/package.json
+++ b/app/package.json
@@ -34,6 +34,7 @@
     "create-react-class": "^15.7.0",
     "graphql": "^15.5.0",
     "graphql-tag": "^2.12.4",
+    "jetifier": "^2.0.0",
     "lottie-ios": "3.1.8",
     "lottie-react-native": "^4.0.2",
     "random-location": "^1.1.3",
