--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,16 +6,20 @@ on:
 jobs:
   build:
     runs-on: ubuntu-18.04
-#    container: mingc/android-build-box:latest
+    container: mingc/android-build-box:latest
+    defaults:
+      run:
+        working-directory: "./app"
+
     steps:
-      - run: "ls"
-#      - run: "gem install bundler:2.2.15"
-#      - run: "rm -rf node_modules"
-#      - run: "yarn"
-#      - run: "npx jetify"
-#      - run: "cd android"
-#      - run: "./gradlew clean"
-#      - run: "fastlane install_plugins"
-#      - run: "fastlane build id:${{ secrets.ANDROID_APP_ID }} token:${{ secrets.TOKEN }}"
+      - run:  "cd app"
+      - run: "gem install bundler:2.2.15"
+      - run: "rm -rf node_modules"
+      - run: "yarn"
+      - run: "npx jetify"
+      - run: "cd android"
+      - run: "./gradlew clean"
+      - run: "fastlane install_plugins"
+      - run: "fastlane build id:${{ secrets.ANDROID_APP_ID }} token:${{ secrets.TOKEN }}"
 
 
