--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,24 +1,25 @@
 on:
   push:
     branches:
-    - '*'
+      - '*'
 
 jobs:
   build:
     runs-on: ubuntu-18.04
     container: mingc/android-build-box:latest
-    defaults:
-      run:
-        working-directory: "app"
 
     steps:
       - run: "gem install bundler:2.2.15"
       - run: "rm -rf node_modules"
+        working-directory: app
       - run: "yarn"
+        working-directory: app
       - run: "npx jetify"
-      - run: "cd android"
+        working-directory: app
       - run: "./gradlew clean"
+        working-directory: app/android
       - run: "fastlane install_plugins"
+        working-directory: app/android
       - run: "fastlane build id:${{ secrets.ANDROID_APP_ID }} token:${{ secrets.TOKEN }}"
-
+        working-directory: app/android
 
