--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,11 +11,10 @@ jobs:
     runs-on: ubuntu-18.04
 #    container: mingc/android-build-box:latest
     steps:
-      - run :  "echo Work dir: $(pwd)"
 #      - run: "gem install bundler:2.2.15"
 #      - run: "rm -rf node_modules"
 #        working-directory: app
-#      - run: "yarn"
+      - run: "yarn"
 #        working-directory: app
 #      - run: "npx jetify"
 #        working-directory: app
