--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,6 +17,7 @@ jobs:
       - run: "rm -rf node_modules"
       - run: "yarn"
       - run: "npx jetify"
+      - run: "cd android"
       - run: "./gradlew clean"
       - run: "fastlane install_plugins"
       - run: "fastlane build id:${{ secrets.ANDROID_APP_ID }} token:${{ secrets.TOKEN }}"
