--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,8 +17,11 @@ jobs:
       - run: "rm -rf node_modules"
       - run: "yarn"
       - run: "npx jetify"
-      - run: "cd android"
       - run: "./gradlew clean"
+        working-directory: android/
       - run: "fastlane install_plugins"
+        working-directory: android/
       - run: "fastlane build id:${{ secrets.ANDROID_APP_ID }} token:${{ secrets.TOKEN }}"
+        working-directory: android/
+
 
