--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Meetup Backoffice",
+  "name": "meetup-backoffice",
   "homepage": "https://localhost",
   "version": "1.0.0",
   "private": true,
