--- a/app/package.json
+++ b/app/package.json
@@ -18,13 +18,15 @@
     "@react-native-community/google-signin": "^5.0.0",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-firebase/analytics": "^10.4.1",
-    "@react-native-firebase/app": "^10.4.0",
+    "@react-native-firebase/app": "^10.4.1",
     "@react-native-firebase/crashlytics": "^10.4.1",
     "@react-native-firebase/messaging": "^10.4.1",
+    "@react-native-firebase/storage": "^10.4.1",
     "@react-navigation/bottom-tabs": "^5.11.2",
     "@react-navigation/material-top-tabs": "^5.3.15",
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
+    "add": "^2.0.6",
     "apollo-cache-inmemory": "^1.6.6",
     "apollo-client": "^2.6.10",
     "apollo-client-preset": "^1.0.8",
@@ -51,6 +53,7 @@
     "react-native-fbsdk": "^3.0.0",
     "react-native-gesture-handler": "^1.9.0",
     "react-native-haptic-feedback": "^1.11.0",
+    "react-native-image-picker": "^4.0.3",
     "react-native-image-viewing": "^0.2.0",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-maps": "^0.27.1",
@@ -73,7 +76,8 @@
     "react-native-vector-icons": "^7.1.0",
     "rn-range-slider": "^2.0.4",
     "subscriptions-transport-ws": "^0.9.18",
-    "toggle-switch-react-native": "^2.3.0"
+    "toggle-switch-react-native": "^2.3.0",
+    "yarn": "^1.22.10"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
