--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "apollo-server": "2.24.0",
     "bcrypt": "5.0.1",
     "dotenv": "8.2.0",
+    "geolib": "^3.3.1",
     "graphql": "15.5.0",
     "graphql-middleware": "6.0.10",
     "graphql-shield": "7.5.0",
