--- a/app/package.json
+++ b/app/package.json
@@ -20,6 +20,7 @@
     "@react-native-firebase/analytics": "^10.4.1",
     "@react-native-firebase/app": "^10.4.1",
     "@react-native-firebase/crashlytics": "^10.4.1",
+    "@react-native-firebase/dynamic-links": "^12.0.0",
     "@react-native-firebase/messaging": "^10.4.1",
     "@react-native-firebase/storage": "^10.4.1",
     "@react-navigation/bottom-tabs": "^5.11.2",
