--- a/app/package.json
+++ b/app/package.json
@@ -24,6 +24,7 @@
     "@react-native-firebase/dynamic-links": "^12.0.0",
     "@react-native-firebase/messaging": "^10.4.1",
     "@react-native-firebase/storage": "^10.4.1",
+    "@react-native-picker/picker": "^1.16.1",
     "@react-navigation/bottom-tabs": "^5.11.2",
     "@react-navigation/material-top-tabs": "^5.3.15",
     "@react-navigation/native": "^5.8.10",
@@ -48,9 +49,11 @@
     "react-apollo": "^3.1.5",
     "react-native": "0.64.0",
     "react-native-animated-input": "^1.0.9",
+    "react-native-animated-splash-screen": "^2.0.5",
     "react-native-appearance": "^0.3.4",
     "react-native-branch": "^5.0.0",
     "react-native-camera": "^3.43.9",
+    "react-native-chart-kit": "^6.11.0",
     "react-native-config": "^1.4.1",
     "react-native-currency-picker": "^1.0.5",
     "react-native-fast-image": "^8.3.4",
@@ -65,6 +68,7 @@
     "react-native-material-ripple": "^0.9.1",
     "react-native-modal": "^11.6.1",
     "react-native-permissions": "^3.0.3",
+    "react-native-picker-select": "^8.0.4",
     "react-native-progress": "^4.1.2",
     "react-native-qrcode-scanner": "^1.5.4",
     "react-native-reanimated": "^1.13.2",
@@ -75,6 +79,7 @@
     "react-native-splash-screen": "^3.2.0",
     "react-native-star-rating": "^1.1.0",
     "react-native-sticky-parallax-header": "^0.4.0",
+    "react-native-svg": "^12.1.1",
     "react-native-swiper": "^1.6.0",
     "react-native-tab-view": "2.16.0",
     "react-native-vector-icons": "^7.1.0",
