--- a/app/package.json
+++ b/app/package.json
@@ -39,11 +39,13 @@
     "apollo-utilities": "^1.3.4",
     "create-react-class": "^15.7.0",
     "dayjs": "^1.10.5",
+    "geolib": "^3.3.1",
     "graphql": "^15.5.0",
     "graphql-tag": "^2.12.4",
     "jetifier": "^2.0.0",
     "lottie-ios": "3.1.8",
     "lottie-react-native": "^4.0.2",
+    "moment": "^2.29.1",
     "random-location": "^1.1.3",
     "react": "17.0.1",
     "react-apollo": "^3.1.5",
