--- a/app/package.json
+++ b/app/package.json
@@ -58,6 +58,7 @@
     "react-native-chart-kit": "^6.11.0",
     "react-native-config": "^1.4.1",
     "react-native-currency-picker": "^1.0.5",
+    "react-native-elements": "^3.4.2",
     "react-native-fast-image": "^8.3.4",
     "react-native-fbsdk": "^3.0.0",
     "react-native-gesture-handler": "^1.9.0",
