--- a/meetup-register/package.json
+++ b/meetup-register/package.json
@@ -10,6 +10,7 @@
     "crypto-js": "^4.0.0",
     "final-form": "^4.20.2",
     "graphql": "^15.5.0",
+    "jsonwebtoken": "^8.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-final-form": "^6.5.3",
