--- a/app/ios/meetup/meetup.entitlements
+++ b/app/ios/meetup/meetup.entitlements
@@ -13,5 +13,9 @@
 	<true/>
 	<key>com.apple.developer.healthkit.access</key>
 	<array/>
+	<key>com.apple.security.application-groups</key>
+	<array>
+		<string>group.com.fii.onesignal</string>
+	</array>
 </dict>
 </plist>
