--- a/app/ios/Podfile
+++ b/app/ios/Podfile
@@ -3,6 +3,10 @@ require_relative '../node_modules/@react-native-community/cli-platform-ios/nativ
 
 platform :ios, '10.0'
 $FirebaseSDKVersion = '7.0.0'
+target 'OneSignalNotificationServiceExtension' do
+  pod 'OneSignal', '>= 3.0', '< 4.0'
+end
+
 target 'meetup' do
 
   # React Native Maps dependencies
