--- a/app/package.json
+++ b/app/package.json
@@ -70,6 +70,7 @@
     "react-native-masked-text": "^1.13.0",
     "react-native-material-ripple": "^0.9.1",
     "react-native-modal": "^11.6.1",
+    "react-native-onesignal": "^4.1.1",
     "react-native-permissions": "^3.0.3",
     "react-native-picker-select": "^8.0.4",
     "react-native-progress": "^4.1.2",
