--- a/backend/package.json
+++ b/backend/package.json
@@ -1,6 +1,11 @@
 {
   "name": "graphql-auth",
   "license": "MIT",
+  "engines": {
+    "node": "14.17.0",
+    "npm": "6.14.13",
+    "yarn": "1.22.10"
+  },
   "private": true,
   "scripts": {
     "dev": "cross-env NODE_ENV=development tsnd --no-notify --respawn --transpile-only ./src",
@@ -20,6 +25,7 @@
   },
   "dependencies": {
     "@prisma/client": "2.21.2",
+    "@sendgrid/mail": "^7.4.4",
     "apollo-server": "2.24.0",
     "bcrypt": "5.0.1",
     "dotenv": "8.2.0",
