--- a/app/.env.example
+++ b/app/.env.example
@@ -2,3 +2,4 @@ API_URL = https://meetup-graphql-backend.herokuapp.com
 WS_URL = ws://meetup-graphql-backend.herokuapp.com/graphql
 POSITION_STACK_API = b4028f88034fcc76c325e9c4388c1f76
 ONE_SIGNAL_APP_ID = f8747de7-179f-4afe-a62b-4191c5dd089d
+LOCATION_KEY = pk.4ffc58640549bc475e052bdc44168b7f
