--- a/app/ios/meetup/GoogleService-Info.plist
+++ b/app/ios/meetup/GoogleService-Info.plist
@@ -3,21 +3,21 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>373085034119-lob5p57a9npe9bmgbqp7u3glpmnc7koe.apps.googleusercontent.com</string>
+	<string>689597134998-h4ovs056393p56j3hi83tf6c3urrdeis.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.373085034119-lob5p57a9npe9bmgbqp7u3glpmnc7koe</string>
+	<string>com.googleusercontent.apps.689597134998-h4ovs056393p56j3hi83tf6c3urrdeis</string>
 	<key>API_KEY</key>
-	<string>AIzaSyAklNSPZ7rTsOSaGXMFcoLYPjwk1-ZF5Ws</string>
+	<string>AIzaSyCjPgjXhWGQUu1AbtCTqMienlvYfNCg6sw</string>
 	<key>GCM_SENDER_ID</key>
-	<string>373085034119</string>
+	<string>689597134998</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
 	<string>com.fii.meetup</string>
 	<key>PROJECT_ID</key>
-	<string>steppers-uaic</string>
+	<string>meetup-eb23a</string>
 	<key>STORAGE_BUCKET</key>
-	<string>steppers-uaic.appspot.com</string>
+	<string>meetup-eb23a.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -29,6 +29,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:373085034119:ios:c58a3245c0ff0104d30a22</string>
+	<string>1:689597134998:ios:1c2cb49bb81afd4fa62ab7</string>
 </dict>
 </plist>
